# PIAA3_Warcaby

./: AI.cpp  AI.hpp  CMakeLists.txt  asd  board.cpp  board.hpp  game.hpp  gui.cpp  main.cpp  move.hpp  piece.hpp  todo.txt  warcaby  wr
